--- a/App.xaml
+++ b/App.xaml
@@ -9,6 +9,20 @@
             <converters:InverseBoolConverter x:Key="InverseBool"/>
             <converters:BoolToLoginTextConverter x:Key="BoolToLoginText"/>
             <converters:BoolToRegistroTextConverter x:Key="BoolToRegistroText"/>
+            <converters:PuntuacionToStarImageConverter x:Key="PuntuacionToStarImageConverter" />
+            <Style TargetType="Label">
+                <Setter Property="FontSize" Value="20" />
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="FontSize" Value="20" />
+            </Style>
+            <Style TargetType="Entry">
+                <Setter Property="FontSize" Value="20" />
+            </Style>
+            <Style TargetType="Editor">
+                <Setter Property="FontSize" Value="20" />
+            </Style>
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
