--- a/Views/AcercaPage.xaml
+++ b/Views/AcercaPage.xaml
@@ -3,87 +3,55 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Prueba.Views.AcercaPage"
              xmlns:models="clr-namespace:Prueba.Models"
-             Title="A cerca del programador"
+             Title="Acerca del programador"
              Background="#00643b">
-    <VerticalStackLayout>
 
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+    <VerticalStackLayout Spacing="10" Padding="20">
 
-            <VerticalStackLayout
-                Grid.Row="0"
-                Grid.Column="1"
-                VerticalOptions="Center"
-                HorizontalOptions="End"
-                Margin="38,-10,0,0">
+        <Label
+            Text="Datos del programador"
+            TextColor="White"
+            FontSize="23"
+            FontAttributes="Bold"
+            HorizontalOptions="Center"
+            Margin="0,10" />
 
-                <Label
-                  Text="Datos del programador"
-                  TextColor="White"
-                  Padding="40"
-                  Margin="20,-10,-30,0"
-                  FontSize="Small"
-                  HorizontalTextAlignment="Center"
-                />
-            </VerticalStackLayout>
+        <Image
+            Aspect="AspectFill"
+            HorizontalOptions="Center"
+            HeightRequest="200"
+            WidthRequest="200"
+            Source="foto.jpg" />
 
-            <VerticalStackLayout
-                Grid.Row="1"
-                Grid.ColumnSpan="2"
-                VerticalOptions="Center"
-                HorizontalOptions="Center"
-                Margin="0,10,0,0">
+        <Label
+           Text="GitHub:"
+           TextColor="White"
+           FontSize="19"
+           HorizontalOptions="Start" />
 
-                <Image
-                    Aspect="AspectFill"
-                    HorizontalOptions="Center"
-                    Margin="20,40,0,0"
-                    HeightRequest="215"
-                    WidthRequest="230"
-                    Source="foto.jpg"
-                />
-                <Label
-                   Text="GitHub:"
-                   TextColor="White"
-                   Padding="40"
-                   Margin="-20,15,0,5"
-                   FontSize="Small"
-                   HorizontalTextAlignment="Start"
-                />
-                <Label
-                   Text="https://github.com/JS12345665654"
-                   TextColor="White"
-                   TextDecorations="Underline"
-                   Padding="40"
-                   Margin="-20,-80,0,5"
-                   FontSize="Small"
-                   HorizontalTextAlignment="Start"
-                />
-                <Label
-                   Text="LinkedIn:"
-                   TextColor="White"
-                   Padding="40"
-                   Margin="-20,15,0,5"
-                   FontSize="Small"
-                   HorizontalTextAlignment="Start"
-                />
-                <Label
-                   Text="https://www.linkedin.com/in/joaqu%C3%ADn-sober%C3%B3n-5797b2180/"
-                   TextColor="White"
-                   TextDecorations="Underline"
-                   Padding="40"
-                   Margin="-20,-80,0,5"
-                   FontSize="Micro"
-                   HorizontalTextAlignment="Start"
-                />
-            </VerticalStackLayout>
-        </Grid>
+        <Label
+           Text="https://github.com/JS12345665654"
+           TextColor="LightBlue"
+           TextDecorations="Underline"
+           FontSize="17"
+           HorizontalOptions="Start" />
+
+        <Label
+           Text="LinkedIn:"
+           TextColor="White"
+           FontSize="19"
+           HorizontalOptions="Start" />
+
+        <Label
+           Text="https://www.linkedin.com/in/joaqu%C3%ADn-sober%C3%B3n-5797b2180/"
+           TextColor="LightBlue"
+           TextDecorations="Underline"
+           FontSize="17"
+           HorizontalOptions="Start" />
+
+        <Image Source="sobreelprogramador.png"
+               HeightRequest="200"
+               HorizontalOptions="Center"
+               Margin="0,20,0,10"/>
     </VerticalStackLayout>
 </ContentPage>
