--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -29,7 +29,7 @@
                 RowDefinitions="Auto, Auto, Auto, Auto, Auto"
                 Margin="0,10,0,20">
 
-                <Label Text="MENÚ DE OPCIONES" 
+                <Label Text="Menú de opciones" 
                        Grid.ColumnSpan="2" 
                        Grid.Row="0"
                        HorizontalOptions="Center"
@@ -55,19 +55,19 @@
                     </Button.ImageSource>
                 </Button>
 
-                <Button Grid.Column="1" Grid.Row="2" BackgroundColor="#9C27B0" Text="Autores" TextColor="White" HeightRequest="85" Command="{Binding GoToAutorListaCommand}" ContentLayout="Top, 5">
+                <Button Grid.Column="1" Grid.Row="2" BackgroundColor="#1976D2" Text="Autores" TextColor="White" HeightRequest="85" Command="{Binding GoToAutorListaCommand}" ContentLayout="Top, 5">
                     <Button.ImageSource>
                         <FontImageSource Glyph="&#xf233;" FontFamily="MaterialIconsRegular" Size="22" />
                     </Button.ImageSource>
                 </Button>
 
-                <Button Grid.Column="0" Grid.Row="3" BackgroundColor="#03A9F4" Text="Categorías" TextColor="White" HeightRequest="85" Command="{Binding GoToCategoriaListaCommand}" ContentLayout="Top, 5">
+                <Button Grid.Column="0" Grid.Row="3" BackgroundColor="DarkViolet" Text="Categorías" TextColor="White" HeightRequest="85" Command="{Binding GoToCategoriaListaCommand}" ContentLayout="Top, 5">
                     <Button.ImageSource>
                         <FontImageSource Glyph="&#xe5c3;" FontFamily="MaterialIconsRegular" Size="22" />
                     </Button.ImageSource>
                 </Button>
 
-                <Button Grid.Column="1" Grid.Row="3" BackgroundColor="#FFC107" Text="Acerca" TextColor="Black" HeightRequest="85" Command="{Binding GoToAcercaCommand}" ContentLayout="Top, 5">
+                <Button Grid.Column="1" Grid.Row="3" BackgroundColor="DarkGoldenrod" Text="A cerca" TextColor="White" HeightRequest="85" Command="{Binding GoToAcercaCommand}" ContentLayout="Top, 5">
                     <Button.ImageSource>
                         <FontImageSource Glyph="&#xe88e;" FontFamily="MaterialIconsRegular" Size="22" />
                     </Button.ImageSource>
@@ -78,7 +78,6 @@
                         <FontImageSource Glyph="&#xe9ba;" FontFamily="MaterialIconsRegular" Size="22" />
                     </Button.ImageSource>
                 </Button>
-
             </Grid>
         </VerticalStackLayout>
     </ScrollView>
